--- a/index.php/product/caramel-soy-candle/index.html
+++ b/index.php/product/caramel-soy-candle/index.html
@@ -653,8 +653,8 @@ img.emoji {
 	<form class="cart" action="http://localhost:7000/myproject/wordpress-6.0.1%20(1)/wordpress/index.php/product/caramel-soy-candle/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_63493313ed863">Caramel soy candle số lượng</label>
-		<input type="number" id="quantity_63493313ed863" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_634934dd62946">Caramel soy candle số lượng</label>
+		<input type="number" id="quantity_634934dd62946" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="519" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
