--- a/index.php/product/single-wick-candle/index.html
+++ b/index.php/product/single-wick-candle/index.html
@@ -662,8 +662,8 @@ img.emoji {
 	<form class="cart" action="http://localhost:7000/myproject/wordpress-6.0.1%20(1)/wordpress/index.php/product/single-wick-candle/" method="post" enctype="multipart/form-data">
 		
 			<div class="quantity">
-				<label class="screen-reader-text" for="quantity_635244693146f">Single wick candle số lượng</label>
-		<input type="number" id="quantity_635244693146f" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric" autocomplete="off">
+				<label class="screen-reader-text" for="quantity_635245e469176">Single wick candle số lượng</label>
+		<input type="number" id="quantity_635245e469176" class="input-text qty text" step="1" min="1" max="300" name="quantity" value="1" title="SL" size="4" placeholder="" inputmode="numeric" autocomplete="off">
 			</div>
 	
 		<button type="submit" name="add-to-cart" value="531" class="single_add_to_cart_button button alt">Thêm vào giỏ hàng</button>
